ezyplot-x1/force-app/main/default/objects/Lead/fields/Active_AST__c.field-meta.xml
<CustomField>
    <fullName>Active_AST__c</fullName>
    <label>Active AST</label>
    <length>99</length>
    <type>Text</type>
</CustomField>