ezyplot-x1/force-app/main/default/objects/Lead/fields/Address_IN__c.field-meta.xml
<CustomField>
    <fullName>Address_IN__c</fullName>
    <inlineHelpText>This will sync to the STREET and NAME fields on this record</inlineHelpText>
    <label>Address IN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>