ezyplot-x1/force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>if( Days_on_market__c &lt; 30,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_blue.png&apos;,&apos;&lt;1&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( Days_on_market__c &gt; 30,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_blue.png&apos;,&apos;&gt;1&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( Days_on_market__c &gt; 60,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_blue.png&apos;,&apos;&gt;3&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( Days_on_market__c  &gt; 90,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;3&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( Days_on_market__c  &gt; 180,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;6&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( Days_on_market__c  &gt; 360,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;12&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in months</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>