ezyplot-x1/force-app/main/default/objects/Lead/fields/Agent_account__c.field-meta.xml
<CustomField>
    <fullName>Agent_account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agent (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>