ezyplot-x1/force-app/main/default/objects/Lead/fields/Area_affordability__c.field-meta.xml
<CustomField>
    <fullName>Area_affordability__c</fullName>
    <formula>Postcode_district__r.Affordability_image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area affordability</label>
    <type>Text</type>
</CustomField>