ezyplot-x1/force-app/main/default/objects/Lead/fields/Area_status__c.field-meta.xml
<CustomField>
    <fullName>Area_status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Area status</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>