ezyplot-x1/force-app/main/default/objects/Lead/fields/Asking__c.field-meta.xml
<CustomField>
    <fullName>Asking__c</fullName>
    <label>Asking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>