ezyplot-x1/force-app/main/default/objects/Lead/fields/Auction_rating__c.field-meta.xml
<CustomField>
    <fullName>Auction_rating__c</fullName>
    <formula>if( ROI_Auction__c  &gt; 0.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;1&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( ROI_Auction__c  &gt; 1.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;2&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( ROI_Auction__c  &gt; 2.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;3&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( ROI_Auction__c  &gt; 3.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;4&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( ROI_Auction__c  &gt; 4.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;5&apos;),&apos;&apos;)

&amp;&quot; &quot;&amp;
if( ROI_Auction__c  &gt; 5.5,
IMAGE(&apos;/resource/1615450010000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&apos;,&apos;&gt;5&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 flag is 100% auction ROI, 2 flags 200%, etc</inlineHelpText>
    <label>Auction rating</label>
    <type>Text</type>
</CustomField>