ezyplot-x1/force-app/main/default/objects/Lead/fields/Auction_target__c.field-meta.xml
<CustomField>
    <fullName>Auction_target__c</fullName>
    <formula>if (OMV_long_lease__c &gt; 0, 
    (OMV_long_lease__c *1-OMV_correction__c) - (Refurbishment__c + Lease_extension__c)/2,
    if (OMV_estimate__c &gt; 0, 
        (OMV_estimate__c *1-OMV_correction__c) - (Refurbishment__c + Lease_extension_estimate__c)/2,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OMV - (refurb + extension) /2</inlineHelpText>
    <label>Auction target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>