ezyplot-x1/force-app/main/default/objects/Lead/fields/Callout_buffer__c.field-meta.xml
<CustomField>
    <fullName>Callout_buffer__c</fullName>
    <label>Callout buffer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>