ezyplot-x1/force-app/main/default/objects/Lead/fields/Cash_required_Auction_flip__c.field-meta.xml
<CustomField>
    <fullName>Cash_required_Auction_flip__c</fullName>
    <formula>Asking__c *0.33 +2000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>70% bridge LTV +3% SDLT +2000 legals+pack</inlineHelpText>
    <label>Cash required (Auction flip)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>