ezyplot-x1/force-app/main/default/objects/Lead/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <description>do NOT change fieldnames; these are  used in PropertyyData</description>
    <label>Construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pre_1914</fullName>
                <label>Pre 1914</label>
            </value>
            <value>
                <fullName>1914_2000</fullName>
                <label>1914 - 2000</label>
            </value>
            <value>
                <fullName>2000_onwards</fullName>
                <label>2001-2021</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>