ezyplot-x1/force-app/main/default/objects/Lead/fields/Contact_hist__c.field-meta.xml
<CustomField>
    <fullName>Contact_hist__c</fullName>
    <label>Contact hist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>