ezyplot-x1/force-app/main/default/objects/Lead/fields/Days_on_market__c.field-meta.xml
<CustomField>
    <fullName>Days_on_market__c</fullName>
    <label>Days on market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>