ezyplot-x1/force-app/main/default/objects/Lead/fields/Ex_council__c.field-meta.xml
<CustomField>
    <fullName>Ex_council__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ex council</label>
    <type>Checkbox</type>
</CustomField>