ezyplot-x1/force-app/main/default/objects/Lead/fields/First_seen__c.field-meta.xml
<CustomField>
    <fullName>First_seen__c</fullName>
    <label>First seen</label>
    <type>Date</type>
</CustomField>