ezyplot-x1/force-app/main/default/objects/Lead/fields/First_seen_STRING__c.field-meta.xml
<CustomField>
    <fullName>First_seen_STRING__c</fullName>
    <label>First seen STRING</label>
    <length>99</length>
    <type>Text</type>
</CustomField>