ezyplot-x1/force-app/main/default/objects/Lead/fields/Floor_level__c.field-meta.xml
<CustomField>
    <fullName>Floor_level__c</fullName>
    <label>Floor level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>