ezyplot-x1/force-app/main/default/objects/Lead/fields/Gross_margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_margin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>