ezyplot-x1/force-app/main/default/objects/Lead/fields/Gross_margin_ex_extension__c.field-meta.xml
<CustomField>
    <fullName>Gross_margin_ex_extension__c</fullName>
    <inlineHelpText>Visual gain for the uninformed (auction!)</inlineHelpText>
    <label>Gross margin ex extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>