ezyplot-x1/force-app/main/default/objects/Lead/fields/Gross_margin_ex_extension_perc__c.field-meta.xml
<CustomField>
    <fullName>Gross_margin_ex_extension_perc__c</fullName>
    <label>Gross margin ex extension (perc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>