ezyplot-x1/force-app/main/default/objects/Lead/fields/Ground_rent__c.field-meta.xml
<CustomField>
    <fullName>Ground_rent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ground rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>