ezyplot-x1/force-app/main/default/objects/Lead/fields/Holding_cost_PCM_LT__c.field-meta.xml
<CustomField>
    <fullName>Holding_cost_PCM_LT__c</fullName>
    <formula>( (Asking__c+ Refurbishment__c)*0.75*0.04 +Ground_rent__c +Service_charge__c) /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GR + SC + (asking + refurb) *.75% LTV at 4% PA</inlineHelpText>
    <label>Holding cost PCM (LT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>