ezyplot-x1/force-app/main/default/objects/Lead/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>