ezyplot-x1/force-app/main/default/objects/Lead/fields/Lease_end_date__c.field-meta.xml
<CustomField>
    <fullName>Lease_end_date__c</fullName>
    <label>Lease end date</label>
    <type>Date</type>
</CustomField>