ezyplot-x1/force-app/main/default/objects/Lead/fields/Lease_end_date_STRING__c.field-meta.xml
<CustomField>
    <fullName>Lease_end_date_STRING__c</fullName>
    <label>Lease end date STRING</label>
    <length>99</length>
    <type>Text</type>
</CustomField>