ezyplot-x1/force-app/main/default/objects/Lead/fields/Lease_extension__c.field-meta.xml
<CustomField>
    <fullName>Lease_extension__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If GR=0 then a GR of 50 is assumed for this estimate</inlineHelpText>
    <label>Lease extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>