ezyplot-x1/force-app/main/default/objects/Lead/fields/Lease_extension_estimate__c.field-meta.xml
<CustomField>
    <fullName>Lease_extension_estimate__c</fullName>
    <label>Lease extension estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>