ezyplot-x1/force-app/main/default/objects/Lead/fields/Marketing_status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_status__c</fullName>
    <label>Marketing status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Back on market</fullName>
            </value>
            <value>
                <fullName>Reduced</fullName>
            </value>
            <value>
                <fullName>Offering</fullName>
            </value>
            <value>
                <fullName>SSTC</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>