ezyplot-x1/force-app/main/default/objects/Lead/fields/Marketing_string__c.field-meta.xml
<CustomField>
    <fullName>Marketing_string__c</fullName>
    <label>Marketing string</label>
    <length>99</length>
    <type>Text</type>
</CustomField>