ezyplot-x1/force-app/main/default/objects/Lead/fields/Nearest_exit_Target__c.field-meta.xml
<CustomField>
    <fullName>Nearest_exit_Target__c</fullName>
    <inlineHelpText>Either (1)Auction, (2)BEE or (3)Hold</inlineHelpText>
    <label>Nearest exit Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>