ezyplot-x1/force-app/main/default/objects/Lead/fields/Notes_Depricated__c.field-meta.xml
<CustomField>
    <fullName>Notes_Depricated__c</fullName>
    <label>Notes Depricated</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>