ezyplot-x1/force-app/main/default/objects/Lead/fields/OMV_correction__c.field-meta.xml
<CustomField>
    <fullName>OMV_correction__c</fullName>
    <inlineHelpText>In case property contains a regulated tenant or other reason</inlineHelpText>
    <label>OMV correction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>