ezyplot-x1/force-app/main/default/objects/Lead/fields/OMV_Est__c.field-meta.xml
<CustomField>
    <fullName>OMV_Est__c</fullName>
    <formula>/* assume SQFT for flats as 99% of leasehold units are flats */

If (Size_sqft__c &gt;0,

/* use real sqft */
Size_sqft__c * Postcode__r.Price_paid_for_flats_1yr__c, 

/* guestimate sqft based on #bedrooms */
(300+ 200* Bedrooms__c) * Postcode__r.Price_paid_for_flats_1yr__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pull recent £sqft from related Area (=postcode)</inlineHelpText>
    <label>OMV Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>