ezyplot-x1/force-app/main/default/objects/Lead/fields/OMV_estimate__c.field-meta.xml
<CustomField>
    <fullName>OMV_estimate__c</fullName>
    <inlineHelpText>Quick auto estimate based on number of bedrooms and postcode district (eg &apos;WS1&apos;)</inlineHelpText>
    <label>OMV estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>