ezyplot-x1/force-app/main/default/objects/Lead/fields/OMV_long_lease__c.field-meta.xml
<CustomField>
    <fullName>OMV_long_lease__c</fullName>
    <label>OMV (long lease)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>