ezyplot-x1/force-app/main/default/objects/Lead/fields/Outdoor_space__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_space__c</fullName>
    <label>Outdoor space</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>balcony_terrace</fullName>
                <label>Balcony/terrace</label>
            </value>
            <value>
                <fullName>garden</fullName>
                <label>Garden</label>
            </value>
            <value>
                <fullName>garden_very_large</fullName>
                <label>Garden &gt; 1 acre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>