ezyplot-x1/force-app/main/default/objects/Lead/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street/permit parking</fullName>
            </value>
            <value>
                <fullName>Garage (1 space)</fullName>
            </value>
            <value>
                <fullName>Garage (2 spaces)</fullName>
            </value>
            <value>
                <fullName>Garage (3 spaces)</fullName>
            </value>
            <value>
                <fullName>Drive (1 spaces)</fullName>
            </value>
            <value>
                <fullName>Drive (2 spaces)</fullName>
            </value>
            <value>
                <fullName>Drive (3 spaces)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>