ezyplot-x1/force-app/main/default/objects/Lead/fields/PD_Valuation__c.field-meta.xml
<CustomField>
    <fullName>PD_Valuation__c</fullName>
    <formula>&quot;https://propertydata.co.uk/value-house-flat?postcode=&quot; 
+ SUBSTITUTE(LastName , &apos; &apos;, &apos;%20&apos;)  
+ &quot;&amp;bedrooms=&quot; + TEXT(Bedrooms__c)
+ &quot;&amp;sqf=&quot; +  TEXT(Size_sqft__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Valuation</label>
    <type>Text</type>
</CustomField>