ezyplot-x1/force-app/main/default/objects/Lead/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Postcode</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Leads (Postcode)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>