ezyplot-x1/force-app/main/default/objects/Lead/fields/Postcode_district__c.field-meta.xml
<CustomField>
    <fullName>Postcode_district__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Postcode district</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>