ezyplot-x1/force-app/main/default/objects/Lead/fields/Property_type__c.field-meta.xml
<CustomField>
    <fullName>Property_type__c</fullName>
    <label>Property type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>flat</fullName>
                <label>Flat</label>
            </value>
            <value>
                <fullName>terraced_house</fullName>
                <label>Terraced house</label>
            </value>
            <value>
                <fullName>semi_detached_house</fullName>
                <label>Semi-detached house</label>
            </value>
            <value>
                <fullName>detached_house</fullName>
                <label>Detached house</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>