ezyplot-x1/force-app/main/default/objects/Lead/fields/Refurbishment__c.field-meta.xml
<CustomField>
    <fullName>Refurbishment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refurbishment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>