ezyplot-x1/force-app/main/default/objects/Lead/fields/Rental_income__c.field-meta.xml
<CustomField>
    <fullName>Rental_income__c</fullName>
    <label>Rental income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>