ezyplot-x1/force-app/main/default/objects/Lead/fields/Rental_yield__c.field-meta.xml
<CustomField>
    <fullName>Rental_yield__c</fullName>
    <formula>((Rental_income__c - Holding_cost_PCM_LT__c) *12)/ (Asking__c + Refurbishment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>After holding cos</inlineHelpText>
    <label>Rental yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>