ezyplot-x1/force-app/main/default/objects/Lead/fields/ROI_Auction__c.field-meta.xml
<CustomField>
    <fullName>ROI_Auction__c</fullName>
    <formula>(Auction_target__c *0.98 - ( Asking__c  *1.03 -2000))
/  Cash_required_Auction_flip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net ROCE after fees</inlineHelpText>
    <label>ROI Auction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>