ezyplot-x1/force-app/main/default/objects/Lead/fields/ROI_BEE__c.field-meta.xml
<CustomField>
    <fullName>ROI_BEE__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>(incl 3000 legals + 3% SDLT)</inlineHelpText>
    <label>ROI (BEE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>