ezyplot-x1/force-app/main/default/objects/Lead/fields/ROI_BEE_estimate_perc__c.field-meta.xml
<CustomField>
    <fullName>ROI_BEE_estimate_perc__c</fullName>
    <label>ROI BEE estimate (perc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>