ezyplot-x1/force-app/main/default/objects/Lead/fields/ROI_BEE_perc__c.field-meta.xml
<CustomField>
    <fullName>ROI_BEE_perc__c</fullName>
    <inlineHelpText>Incl 3% SDLT + £3000 legals</inlineHelpText>
    <label>ROI BEE (perc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>