ezyplot-x1/force-app/main/default/objects/Lead/fields/Service_charge__c.field-meta.xml
<CustomField>
    <fullName>Service_charge__c</fullName>
    <label>Service charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>