ezyplot-x1/force-app/main/default/objects/Lead/fields/Size_sqft__c.field-meta.xml
<CustomField>
    <fullName>Size_sqft__c</fullName>
    <label>Size (sqft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>