ezyplot-x1/force-app/main/default/objects/Lead/fields/Source1__c.field-meta.xml
<CustomField>
    <fullName>Source1__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>First part of source</inlineHelpText>
    <label>Source1</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>