ezyplot-x1/force-app/main/default/objects/Lead/fields/Source2__c.field-meta.xml
<CustomField>
    <fullName>Source2__c</fullName>
    <label>Source2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>