ezyplot-x1/force-app/main/default/objects/Lead/fields/Source_unique__c.field-meta.xml
<CustomField>
    <fullName>Source_unique__c</fullName>
    <inlineHelpText>Unique ID based on Source1 + Source2</inlineHelpText>
    <label>Source (unique)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>