ezyplot-x1/force-app/main/default/objects/Lead/fields/Years_remaining__c.field-meta.xml
<CustomField>
    <fullName>Years_remaining__c</fullName>
    <label>Years remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>